# tushare-email-fetch

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tushare.yml
project_tools/: combine_code.py  preview_data.py
scripts/: backfill.py  backfill_stock_st.py  check_stock_st_zero.py  fetch_tushare.py  index_weight_utils.py
tests/: conftest.py  test_index_weight_utils.py
