[project]
name = "tushare-email-fetch"
version = "0.1.0"
description = "Fetch Tushare data on schedule and store as CSV (optionally email summary)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tushare>=1.4.0",
    "pandas>=2.1.0",
    "tzdata>=2023.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
